<?xml version="1.0" encoding="utf-8"?>

<!--untuk menuju ke detail fragment bisa melalui halaman daftar resep dan halaman favourite-->
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/mobile_navigation"
    app:startDestination="@+id/navigation_all_dishes">

    <!-- fragmen yang di panggil di halaman daftar resep-->
    <fragment
        android:id="@+id/navigation_all_dishes"
        android:name="com.salsalia.salsalia.view.fragments.AllRecipesFragment"
        android:label="@string/title_home"
        tools:layout="@layout/fragment_alldishes">
        <action
            android:id="@+id/action_all_dishes_to_dish_details"
            app:destination="@id/dishDetailsFragment" />
    </fragment>

    <!-- fragment yang di panggil di halaman favourite-->
    <fragment
        android:id="@+id/navigation_favorite_dishes"
        android:name="com.salsalia.salsalia.view.fragments.FavoriteDishesFragment"
        android:label="@string/title_dashboard"
        tools:layout="@layout/fragment_favorite_dish">
        <action
            android:id="@+id/action_fav_dishes_to_dish_details"
            app:destination="@id/dishDetailsFragment" />
    </fragment>

    <!-- fragment detail yang dapat di kunjungi melalui frament favourite dan fragment daftar resep-->
    <fragment
        android:id="@+id/dishDetailsFragment"
        android:name="com.salsalia.salsalia.view.fragments.DishDetailsFragment"
        android:label="@string/title_dish_details"
        tools:layout="@layout/fragment_dish_details">
        <argument
            android:name="dishDetails"
            app:argType="com.salsalia.salsalia.model.entities.FavDish" />
    </fragment>
</navigation>