<?xml version="1.0" encoding="utf-8"?><!--TODO Step 3: Design the custom dialog using the constraint layout.-->
<!--START-->

<!--membuat tampilan dialog untuk menginputkan gambar-->
<!--dari galeri / dari kamera-->
<!--layout induk menggunakan susunan constrainlayout-->
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical"
    android:padding="@dimen/_10sdp"
    app:chainUseRtl="true">

    <!-- membuat tulisan selected Image Action dengan TextView-->
    <!-- dengan id tv_title dengan lebar mengikuti layar-->
    <!-- tinggi mengikuti content, dengan font size 16, style bold-->
    <!-- posisi berada di atas tv_kamera-->
    <TextView
        android:id="@+id/tv_title"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/title_select_image"
        android:textColor="@color/primaryColor"
        android:textSize="16sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toTopOf="@id/tv_camera"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

        <!-- membuat gambar menu camera dan ada judul camera menggunakan Text view-->
        <!-- dengan id tv_camera, dengan lebar dan tinggi mengikuti content-->
        <!-- memiliki bargin 30 dp di posisikan di tengah dari foreground-->
        <!-- di tempatkan di bawah tv_title di samping kiri tv_galeri-->
    <TextView
        android:id="@+id/tv_camera"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_margin="@dimen/_30sdp"
        android:foreground="?attr/selectableItemBackgroundBorderless"
        android:gravity="center"
        android:text="@string/lbl_camera"
        android:textColor="@color/blue_grey_700"
        android:textSize="@dimen/_15sdp"
        app:drawableTopCompat="@drawable/ic_camera"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintHorizontal_chainStyle="spread"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toLeftOf="@id/tv_gallery"
        app:layout_constraintTop_toBottomOf="@id/tv_title" />

    <!--  membuat gambar menu galeri dan ada judul galeri menggunakan Text view-->
    <!--  dengan id tv_camera, dengan lebar dan tinggi mengikuti content-->
    <!--  memiliki bargin 30 dp di posisikan di tengah dari foreground-->
    <!--  di tempatkan di bawah tv_title di samping kanan tv_camera-->
    <TextView
        android:id="@+id/tv_gallery"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_margin="@dimen/_30sdp"
        android:foreground="?attr/selectableItemBackgroundBorderless"
        android:gravity="center"
        android:text="@string/lbl_gallery"
        android:textColor="@color/blue_grey_700"
        android:textSize="@dimen/_15sdp"
        app:drawableTopCompat="@drawable/ic_gallery"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintHorizontal_chainStyle="spread"
        app:layout_constraintLeft_toRightOf="@id/tv_camera"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@id/tv_title" />

</androidx.constraintlayout.widget.ConstraintLayout><!--END-->