<?xml version="1.0" encoding="utf-8"?><!--TODO Step 1: Design the Dish Details layout.-->
<!--START-->

<!--membuat layout induk dengan scrollView agar layar dapat di scroll-->
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/rl_dish_detail_main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:fillViewport="true"
    android:scrollbars="none"
    tools:context="com.salsalia.salsalia.view.fragments.DishDetailsFragment">

<!--    membuat susunan dengan constrainlayout-->
    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

<!--     menggunakan frame agar dapat menimpah komponen imageview-->
        <FrameLayout
            android:id="@+id/fl_dish_image"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent">

<!--            untuk menampilkan gambar menggunakan ImageView dengan id iv_dish_image-->
<!--            dengan lebar menyesuikan layar dan tinggi 200dp-->
            <ImageView
                android:id="@+id/iv_dish_image"
                android:layout_width="match_parent"
                android:layout_height="@dimen/_200sdp"
                android:background="@color/dish_image_background"
                android:contentDescription="@string/image_contentDescription"
                android:scaleType="fitXY" />

<!--            membuat susunan baru menggunakan liner layout supaya susunan komponen kebawah-->
            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="top|end"
                android:layout_margin="@dimen/_10sdp"
                android:background="@drawable/favorite_button_background"
                android:elevation="@dimen/_10sdp">

<!--                membuat icon favourite di atas gambar-->
<!--                menggunakan image view dengan id iv_favorite_dish-->
<!--                dengan lebar dan tinggi mengikuti content-->
                <ImageView
                    android:id="@+id/iv_favorite_dish"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:contentDescription="@string/image_contentDescription"
                    android:src="@drawable/ic_favorite_unselected" />
            </LinearLayout>
        </FrameLayout>

<!--        membuat untuk menampilkan title dengan textview-->
<!--        dengan di beri id dt_title-->
<!--        dengan lebar dan tinggi sesuai kontent-->
<!--        dan di beri jarak kiri 10dp dan jarak atas 10dp-->
<!--        awal mula di beri text judul dengan font dize 24sp, dengan style bold-->
<!--        di posisikan dibawah frame fl_dish_image-->
        <TextView
            android:id="@+id/dt_title"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="10dp"
            android:layout_marginTop="10dp"
            android:text="@string/lbl_title"
            android:textSize="24sp"
            android:textStyle="bold"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/fl_dish_image" />

        <!--        membuat untuk menampilkan  tipe dengan textview-->
        <!--        dengan di beri id dt_type-->
        <!--        dengan lebar dan tinggi sesuai kontent-->
        <!--        dan di beri jarak kiri 10dp dan jarak atas 10dp-->
        <!--        awal mula di beri text judul dengan font dize 10sp, dengan style bold-->
        <!--        di posisikan dibawah dt_title-->
        <TextView
            android:id="@+id/dt_type"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="10dp"
            android:layout_marginTop="10dp"
            android:text="@string/lbl_type"
            android:textSize="18sp"
            android:textStyle="bold"
            android:visibility="visible"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/dt_title"
            tools:visibility="visible" />
        <!--        membuat untuk menampilkan  kategori dengan textview-->
        <!--        dengan di beri id dt_category-->
        <!--        dengan lebar dan tinggi sesuai kontent-->
        <!--        dan di beri jarak kiri 10dp dan jarak atas 10dp-->
        <!--        awal mula di beri text judul dengan font dize 18sp-->
        <!--        di posisikan dibawah dt_type-->

        <TextView
            android:id="@+id/dt_category"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="10dp"
            android:layout_marginTop="10dp"
            android:text="@string/lbl_category"
            android:textSize="18sp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/dt_type" />


        <!--        membuat untuk menampilkan  komposisi dengan textview-->
        <!--        dengan di beri id dt_ingredients-->
        <!--        dengan lebar dan tinggi sesuai kontent-->
        <!--        dan di beri jarak kiri 10dp dan jarak atas 10dp-->
        <!--        awal mula di beri text judul dengan font dize 18sp, dengan style bold-->
        <!--        di posisikan dibawah dt_category-->
        <TextView
            android:id="@+id/dt_ingredients"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="10dp"
            android:layout_marginTop="10dp"
            android:text="@string/lbl_ingredients"
            android:textSize="18sp"
            android:textStyle="bold"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/dt_category" />

        <!--        membuat untuk menampilkan  step masak dengan textview-->
        <!--        dengan di beri id dt_direction-->
        <!--        dengan lebar dan tinggi sesuai kontent-->
        <!--        dan di beri jarak kiri 10dp dan jarak atas 10dp-->
        <!--        awal mula di beri text judul dengan font dize 18sp, dengan style bold-->
        <!--        di posisikan dibawah dt_ingredients_val-->
        <TextView
            android:id="@+id/dt_direction"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="10dp"
            android:layout_marginTop="10dp"
            android:text="@string/lbl_direction_to_cook"
            android:textSize="18sp"
            android:textStyle="bold"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/dt_ingredients_val" />

        <!--        membuat untuk menampilkan  nilai komposisi dengan textview-->
        <!--        dengan di beri id dt_ingredients_val-->
        <!--        dengan lebar dan tinggi sesuai kontent-->
        <!--        dan di beri jarak kiri 10dp dan jarak atas 10dp-->
        <!--        awal mula di beri text judul dengan font dize 16sp-->
        <!--        di posisikan dibawah dt_ingredients-->
        <TextView
            android:id="@+id/dt_ingredients_val"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="15dp"
            android:layout_marginTop="10dp"
            android:text="Ingredients Value"
            android:textSize="16sp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/dt_ingredients" />


        <!--        membuat untuk menampilkan  nilai step masak dengan textview-->
        <!--        dengan di beri id dt_direction_val-->
        <!--        dengan lebar dan tinggi sesuai kontent-->
        <!--        dan di beri jarak kiri 10dp dan jarak atas 10dp-->
        <!--        awal mula di beri text judul dengan font dize 16sp, dengan style bold-->
        <!--        di posisikan dibawah dt_diretion-->
        <TextView
            android:id="@+id/dt_direction_val"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="15dp"
            android:layout_marginTop="10dp"
            android:text="Ingredients Value"
            android:textSize="16sp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/dt_direction" />
        <!--        membuat untuk menampilkan  lama masak dengan textview-->
        <!--        dengan di beri id dt_time-->
        <!--        dengan lebar dan tinggi sesuai kontent-->
        <!--        dan di beri jarak kiri 10dp dan jarak atas 10dp-->
        <!--        awal mula di beri text judul dengan font dize 14sp, dengan style bold-->
        <!--        di posisikan dibawah dt_direction_val-->
        <TextView
            android:id="@+id/dt_time"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="10dp"
            android:layout_marginTop="10dp"
            android:layout_marginEnd="10dp"
            android:gravity="center"
            android:text="@string/cook_time_format"
            android:textSize="14sp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/dt_direction_val" />

    </androidx.constraintlayout.widget.ConstraintLayout>
</ScrollView><!--END-->